--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "mongodb": "^6.4.0",
+    "mongoose": "^8.2.1",
+    "mongose": "^0.0.2-security",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "react": "^18",
