--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^2.5.0",
     "@heroicons/react": "^2.1.1",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "mongodb": "^6.4.0",
-    "mongoose": "^8.2.1",
+    "mongoose": "^8.2.2",
     "mongose": "^0.0.2-security",
     "next": "14.1.3",
     "next-auth": "^4.24.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-flying-item": "^1.1.3",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
